fix(expandableMenu): Adding missing border

--- a/src/viewer/ExpandableToolMenu.styl
+++ b/src/viewer/ExpandableToolMenu.styl
@@ -5,6 +5,7 @@
 .tooltip-toolbar-overlay
   margin-top 40px
   background-color: var(--primary-background-color);
+  border: 1px solid var(--default-color);
   border-radius: 8px;
 
   .tooltip-arrow
